[gd_scene load_steps=8 format=2]

[ext_resource path="res://art/environnement/animated_sprites/lever1.png" type="Texture" id=1]
[ext_resource path="res://scripts/Switch.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25.4488, 23.4096 )

[sub_resource type="Animation" id=2]
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 17, 29 ]
}

[sub_resource type="Animation" id=3]
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 29, 17, 5 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 40.0

[sub_resource type="CircleShape2D" id=5]
radius = 250.0

[node name="Switch" type="KinematicBody2D" groups=[
"switch",
]]
collision_layer = 128
collision_mask = 17
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
vframes = 8
hframes = 12
frame = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -2.27685, 9.14522 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Trigger = SubResource( 2 )
anims/Untrigger = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
monitorable = false
collision_layer = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 8 )
shape = SubResource( 4 )

[node name="Sound" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sound"]
position = Vector2( -0.233185, 12.2301 )
shape = SubResource( 5 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
process_parent = true
physics_process_parent = true

[node name="SoundTimer" type="Timer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Sound" to="." method="_on_Sound_body_entered"]
[connection signal="timeout" from="SoundTimer" to="." method="_on_SoundTimer_timeout"]
